After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777055 - Epiphany does not remember window size on startup
Epiphany does not remember window size on startup
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-09 19:10 UTC by adria.arrufat
Modified: 2017-01-24 00:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Store last-closed window size in GSettings (8.99 KB, patch)
2017-01-24 00:12 UTC, Michael Catanzaro
committed Details | Review

Description adria.arrufat 2017-01-09 19:10:07 UTC
Epiphany from master does not set the windows size from last session.
It works on Epiphany 3.22.4.
Comment 1 Michael Catanzaro 2017-01-21 03:43:19 UTC
Do you have the "remember previous tabs at startup" preference unchecked? It works for me, but I have a bunch of tabs saved always. I think what might be wrong here is the window state is only saved if you have some tab saved in your session.

(Note: you'll be interested in completely unrelated bug #755193 comment 9 and 10)
Comment 2 adria.arrufat 2017-01-21 09:53:28 UTC
You're right, it works if I enable the "remember previous tabs at startup" preference.

Thank you for the heads up, it's great that multiple filters made they way back into epiphany!
Comment 3 Michael Catanzaro 2017-01-24 00:12:26 UTC
The following fix has been pushed:
27593bb Store last-closed window size in GSettings
Comment 4 Michael Catanzaro 2017-01-24 00:12:30 UTC
Created attachment 344075 [details] [review]
Store last-closed window size in GSettings

This way we can restore the window size even if there is no saved
session state, whether because the restore session feature is disabled,
or simply if the user closed all tabs with Ctrl+W. This should never
cause window size to be forgotten.

Note that this is not quite best-practice for dealing with window
states. That would be https://wiki.gnome.org/HowDoI/SaveWindowState. But
this works, and the recommendation there does not work, so let's do
this.

Also note that it's a bit odd that it's the last-closed window that
determines size. This is what gedit does, and gedit was the first app I
tested, so it seems reasonable. It's only really noticeable if you
resize one window to some silly size while having another window at
reasonable size, and most users will never have multiple windows, and
most users will never disable session restoration anyway, so whatever.