Store last-closed window size in GSettings

This way we can restore the window size even if there is no saved
session state, whether because the restore session feature is disabled,
or simply if the user closed all tabs with Ctrl+W. This should never
cause window size to be forgotten.

Note that this is not quite best-practice for dealing with window
states. That would be https://wiki.gnome.org/HowDoI/SaveWindowState. But
this works, and the recommendation there does not work, so let's do
this.

Also note that it's a bit odd that it's the last-closed window that
determines size. This is what gedit does, and gedit was the first app I
tested, so it seems reasonable. It's only really noticeable if you
resize one window to some silly size while having another window at
reasonable size, and most users will never have multiple windows, and
most users will never disable session restoration anyway, so whatever.

https://bugzilla.gnome.org/show_bug.cgi?id=777055